fixe div and scroll

--- a/src/app/agent-template/agent-template.component.html
+++ b/src/app/agent-template/agent-template.component.html
@@ -30,7 +30,7 @@
                   [autoUpdateContent]="true"
                   [durationBeforeCallback]="1000" 
                   (textChanged)="onChange($event)"
-                  style="min-height: 200px; width:100%; overflow-x: auto;">
+                  style="height: 100%; width:100%; overflow-x: auto;">
                 </div>
 
             </div>
