Create and update service

--- a/src/app/agent-dash/agent-dash.component.html
+++ b/src/app/agent-dash/agent-dash.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 
   <div class="margin-top-20">
-      <app-agent-services [agentSelect]="agentSelected"></app-agent-services>
+      <app-agent-services [agentSelect]="agentSelected" [editMode]="editModeSet" ></app-agent-services>
   </div>
 
 </div>
