--- a/src/app/agent-apis/agent-apis.component.html
+++ b/src/app/agent-apis/agent-apis.component.html
@@ -7,7 +7,9 @@
             <div class="card-header card-header-red">
                 <div class="row header-card-red">
                   <div class="col-8">Apis</div>
-                  <div class="col-4"> + </div>
+                  <div class="col-4"> 
+                      <span class="btnInHeader" (click)="addApi()" > <i class="fa fa-plus" aria-hidden="true"></i> </span>
+                  </div>
                 </div>
             </div>
 
