--- a/src/app/agent-operations/agent-operations.component.html
+++ b/src/app/agent-operations/agent-operations.component.html
@@ -7,24 +7,24 @@
             <div class="card-header card-header-red">
                 <div class="row header-card-red">
                   <div class="col-8">Opérations</div>
-                  <div class="col-4"> + </div>
+                  <div class="col-4"> <span class="btnInHeader" (click)="addOperation()" > <i class="fa fa-plus" aria-hidden="true"></i> </span></div>
                 </div>
             </div>
 
 
             <div class="card-body" *ngIf="apiSelectedOperations" >
-                <div class="row" *ngFor="let api of apiSelectedOperations; index as i;">
+                <div class="row" *ngFor="let api of apiSelectedOperations.operations; index as i;">
                   <div class="col-9" tappable (click)="onSelectOperation(api)" [ngClass]="{'agentSelected': api.method == operationSelected.method , 'agentNoSelected': api.method != operationSelected.method }" >
                     <span class="text-bold"> {{ api.method }} </span>
                   </div>
 
                   <div class="col-1">
-                      <button class="btn btn-clear" (click)="editApi(api)" >
+                      <button class="btn btn-clear" (click)="updateOperation(api)" >
                           <i class="fa fa-pencil" aria-hidden="true"></i>
                       </button>
                   </div>
                   <div class="col-1">
-                    <button class="btn btn-clear" (click)="deleteApi(api)" >
+                    <button class="btn btn-clear" (click)="deleteOperation(api)" >
                         <i class="fa fa-times text_red" aria-hidden="true"></i>
                     </button>
                   </div>
