--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link back_blue" href="#"> 
+              <a class="nav-link back_blue" href="#" (click)="openEditMode()" > 
                 <span class="sr-only">(current)</span>
                 <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 New Service
@@ -50,9 +50,10 @@
       </nav>
       <!-- End top -->
 
-      <!-- Start content-->
+      <!-- Start content  -->
 
-      <app-agent-dash [agentSelect]="agentSelect"></app-agent-dash>
+      <app-agent-dash [agentSelect]="agentSelect" [editMode]="editMode" ></app-agent-dash>
+
       
       <!-- End content-->
 
