--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -16,9 +16,18 @@
 	
 */
 /* You can add global styles to this file, and also import other style files */
+
+@import "../../node_modules/ngx-toastr/toastr.css";
+
+
 $table-head-color: #000;
 $table-head-bg : #e9ecef;
 $table-border-color: #dee2e6;
+
+
+#toast-container > div {
+    opacity:1 !important;
+}
 
 .container90 {
     width: 90%;
@@ -213,6 +222,23 @@ a {
     cursor: pointer;
 }
 
+.div_green {
+    background: linear-gradient(60deg,#66bb6a,#43a047);
+    background-color: rgba(0, 0, 0, 0);
+    color: #FFF !important;
+    font-size: 14px !important;
+    box-shadow: 0 4px 20px 0 rgba(0,0,0,.14),0 7px 10px -5px rgba(76,175,80,.4);
+    cursor: pointer;
+    text-align: center;
+    margin-left: 10px;
+    padding: 2px 5px 2px 5px;
+}
+
+.saveEdite {
+    font-size: 12px;
+    color: #333;
+}
+
 .border {
     border: 1px red solid !important;
 }
@@ -245,6 +271,24 @@ a {
     border-radius: 5px;
 }
 
+.header-card-red input , .header-card-red input:focus{
+    color: #FFF !important;
+    background: none !important;
+    padding: 0px !important;
+    margin: 0px !important;
+    border-top: none !important;
+    border-left: none !important;
+    border-right: none !important;
+    border-radius: 0px !important;
+    outline: none !important;
+}
+
+
+.header-card-red ::placeholder {
+    color: #FFF !important;
+    opacity: 0.6 !important;
+}
+
 .text-bold {
     font-weight: bold !important;
 }
@@ -253,11 +297,32 @@ a {
     font-weight: 100 !important;
 }
 
-.card-body {
+.container-fluid .card {
+    margin-top: 20px !important;
+}
+
+.container-fluid .card-body {
     height: 200px !important;
     overflow-y: scroll;
 }
 
 .margin-after-footer {
     margin: 60px !important;
+}
+/*
+:ng-deep .ng-star-inserted {
+    position: relative !important;
+}
+
+:ng-deep .mat-dialog-container {
+    position: fixed;
+    left: 20%;
+    top: 0%;
+    background-color: white;
+    z-index: 100000;
+}*/
+
+.btnInHeader {
+    margin-left: 10px;
+    cursor: pointer;
 }
