Transfer propertie and feeders

--- a/src/app/agent-edit/agent-edit.component.html
+++ b/src/app/agent-edit/agent-edit.component.html
@@ -511,8 +511,8 @@
                             <div class="col form-group">
                               <label for="typeCtrl">Source </label>
                               <select placeholder = "Type" formControlName="typeCtrl" class="form-control form-control-sm" >
-                                  <option value="XML" > XML </option>
-                                  <option value="JSON" > JSON </option>
+                                  <option value="xml" > XML </option>
+                                  <option value="json" > JSON </option>
                               </select>
                               <small id="passwordHelpBlock" class="form-text text-muted">
                                 Type template response JSON/XML
