--- a/src/app/agent-services/agent-services.component.html
+++ b/src/app/agent-services/agent-services.component.html
@@ -96,7 +96,7 @@
 
     <!-- Feeder properties -->
     <div class="col-xl-6">
-      <app-agent-feeders *ngIf="feederPropSelected" [operationSelect]="feederPropSelected" ></app-agent-feeders>
+      <app-agent-feeders *ngIf="feederPropSelected" [operationSelect]="feederPropSelected" [serviceSelect]="data.selected" [apiSelect]="apiSelected" [opSelect]="oneOpSelected" ></app-agent-feeders>
    </div>
     <!--Feeder properties  -->
 
