--- a/src/app/agent-apis/agent-apis.component.html
+++ b/src/app/agent-apis/agent-apis.component.html
@@ -6,8 +6,8 @@
 
             <div class="card-header card-header-red">
                 <div class="row header-card-red">
-                  <div class="col-8">Apis</div>
-                  <div class="col-4"> 
+                  <div class="col-10">Apis</div>
+                  <div class="col-1 text-right"> 
                       <span class="btnInHeader" (click)="addApi()" > <i class="fa fa-plus" aria-hidden="true"></i> </span>
                   </div>
                 </div>
