--- a/src/app/agent-feeders/agent-feeders.component.html
+++ b/src/app/agent-feeders/agent-feeders.component.html
@@ -6,14 +6,14 @@
 
             <div class="card-header card-header-red">
                 <div class="row header-card-red">
-                  <div class="col-10">Feeder(s) propertie(s)</div>
-                  <div class="col-2 text-right"> + </div>
+                  <div class="col-11">Feeder(s) propertie(s)</div>
+                  <div class="col-1 text-right"> <span class="btnInHeader" (click)="addFeederProperties()" > <i class="fa fa-plus" aria-hidden="true"></i> </span></div>
                 </div>
             </div>
 
 
-            <div class="card-body" *ngIf="operationSelected" text-wrap >
-                <div class="row" *ngFor="let fdr of operationSelected; index as i;">
+            <div class="card-body" *ngIf="feedersSelected" text-wrap >
+                <div class="row" *ngFor="let fdr of feedersSelected; index as i;">
 
                   <div class="col-4">
                     <span class="sDetail">(csvFile)</span> <br />
@@ -31,12 +31,12 @@
                   </div>
 
                   <div class="col-1 text-right">
-                      <button class="btn btn-clear" small (click)="editApi(fdr)" >
+                      <button class="btn btn-clear" small (click)="editFeederPropertiest(fdr)" >
                           <i class="fa fa-pencil" aria-hidden="true"></i>
                       </button>
                   </div>
                   <div class="col-1 text-right">
-                    <button class="btn btn-clear" small (click)="deleteApi(fdr)" >
+                    <button class="btn btn-clear" small (click)="deleteFeeder(fdr)" >
                         <i class="fa fa-times text_red" aria-hidden="true"></i>
                     </button>
                   </div>
