--- a/src/app/agent-operations/agent-operations.component.html
+++ b/src/app/agent-operations/agent-operations.component.html
@@ -6,8 +6,8 @@
 
             <div class="card-header card-header-red">
                 <div class="row header-card-red">
-                  <div class="col-8">Opérations</div>
-                  <div class="col-4"> <span class="btnInHeader" (click)="addOperation()" > <i class="fa fa-plus" aria-hidden="true"></i> </span></div>
+                  <div class="col-10">Opérations</div>
+                  <div class="col-1 text-right"> <span class="btnInHeader" (click)="addOperation()" > <i class="fa fa-plus" aria-hidden="true"></i> </span></div>
                 </div>
             </div>
 
