--- a/src/app/agent-transferts/agent-transferts.component.html
+++ b/src/app/agent-transferts/agent-transferts.component.html
@@ -6,8 +6,8 @@
 
             <div class="card-header card-header-red">
                 <div class="row header-card-red">
-                  <div class="col-10">Transfert(s) and key</div>
-                  <div class="col-2 text-right"> <span class="btnInHeader" (click)="addTransferPropertie()" > <i class="fa fa-plus" aria-hidden="true"></i> </span></div>
+                  <div class="col-11">Transfert(s) and key</div>
+                  <div class="col-1 text-right"> <span class="btnInHeader" (click)="addTransferPropertie()" > <i class="fa fa-plus" aria-hidden="true"></i> </span></div>
                 </div>
             </div>
 
@@ -69,7 +69,7 @@
                       </button>
                   </div>
                   <div class="col-1 text-right">
-                    <button class="btn btn-clear" small (click)="deleteApi(tps)" >
+                    <button class="btn btn-clear" small (click)="deleteTransfert(tps)" >
                         <i class="fa fa-times text_red" aria-hidden="true"></i>
                     </button>
                   </div>
