--- a/src/app/agent-parameters/agent-parameters.component.html
+++ b/src/app/agent-parameters/agent-parameters.component.html
@@ -6,8 +6,8 @@
 
             <div class="card-header card-header-red">
                 <div class="row header-card-red">
-                  <div class="col-10">Paramètre(s)</div>
-                  <div class="col-2 text-right"> + </div>
+                  <div class="col-11">Paramètre(s)</div>
+                  <div class="col-1 "> <span class="btnInHeader" (click)="addParameters()" > <i class="fa fa-plus" aria-hidden="true"></i> </span></div>
                 </div>
             </div>
 
@@ -35,12 +35,12 @@
 
 
                   <div class="col-1 text-right">
-                      <button class="btn btn-clear" small (click)="editApi(prs)" >
+                      <button class="btn btn-clear" small (click)="editParameters(prs)" >
                           <i class="fa fa-pencil" aria-hidden="true"></i>
                       </button>
                   </div>
                   <div class="col-1 text-right">
-                    <button class="btn btn-clear" small (click)="deleteApi(prs)" >
+                    <button class="btn btn-clear" small (click)="deleteParameters(prs)" >
                         <i class="fa fa-times text_red" aria-hidden="true"></i>
                     </button>
                   </div>
