--- a/src/app/agent-properties/agent-properties.component.html
+++ b/src/app/agent-properties/agent-properties.component.html
@@ -6,8 +6,7 @@
 
             <div class="card-header card-header-red">
                 <div class="row header-card-red">
-                  <div class="col-10">Propriété / Règles </div>
-                  <div class="col-2 text-right"> + </div>
+                  <div class="col-12">Propriété / Règles </div>
                 </div>
             </div>
 
@@ -16,19 +15,26 @@
             <div class="card-body"  text-wrap >
 
               <div class="row">
-                <div class="col text-bold text-normal">Response Type</div>
-                <div class="col text-normal"> {{responseSelected.responseType}} </div>
+                <div class="col-4 text-bold text-normal">Response Type</div>
+                <div class="col-6 text-normal"> {{responseSelected.responseType}} </div>
+                <div class="col-2"> <button class="btn btn-clear" small (click)="editProperties()" > <i class="fa fa-pencil" aria-hidden="true"></i> </button> </div>
               </div>
               <div class="row">
-                <div class="col text-bold text-normal">Delay</div>
-                <div class="col text-normal"> {{responseSelected.delay}} ms</div>
+                <div class="col-4 text-bold text-normal">Delay</div>
+                <div class="col-6 text-normal"> {{responseSelected.delay}} ms</div>
+                <div class="col-2">&nbsp;</div>
               </div>
 
               <hr class="hrSep" />
 
-              <div *ngIf="operationSelected"> <!-- regexp -->
+              <div *ngIf="reglesSelected"> <!-- regexp -->
 
-                <div class="row" *ngFor="let rgl of operationSelected; index as i;">
+                <div class="row header-card-red">
+                    <div class="col-11">Règles </div>
+                    <div class="col-1 "> <span class="btnInHeader" (click)="addRegles()" > <i class="fa fa-plus" aria-hidden="true"></i> </span></div>
+                  </div>
+
+                <div class="row" *ngFor="let rgl of reglesSelected; index as i;">
 
                     <div class="col-2">
                         <span class="text-bold text-normal"> RegExp n° {{ i }} </span>
@@ -44,12 +50,12 @@
   
   
                     <div class="col-1 text-right">
-                        <button class="btn btn-clear" small (click)="editApi(rgl)" >
+                        <button class="btn btn-clear" small (click)="editRegles(rgl)" >
                             <i class="fa fa-pencil" aria-hidden="true"></i>
                         </button>
                     </div>
                     <div class="col-1 text-right">
-                      <button class="btn btn-clear" small (click)="deleteApi(rgl)" >
+                      <button class="btn btn-clear" small (click)="deleteRegles(rgl)" >
                           <i class="fa fa-times text_red" aria-hidden="true"></i>
                       </button>
                     </div>
