--- a/src/app/edit/template/template.component.scss
+++ b/src/app/edit/template/template.component.scss
@@ -7,3 +7,17 @@
     padding: 5px 5px 5px 10px;
     font-weight: bold;
 }
+
+.form-controls {
+    width: 10%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #495057;
+    background-color: none !important;
+    background-clip: none !important;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    float: right;
+}
