--- a/src/app/agent-template/agent-template.component.scss
+++ b/src/app/agent-template/agent-template.component.scss
@@ -14,3 +14,16 @@
     border-left: 3px solid #43a047;
     cursor: pointer;
 }
+
+.form-controls {
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #495057;
+    background-color: none !important;
+    background-clip: none !important;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
